[package]
name = "admin_helper"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27.0" # или твоя версия
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
global-hotkey = "0.5.0"
rdev = "0.5.3"
arboard = "3.3.0"
chrono = "0.4"
winapi = { version = "0.3", features = [
    "winuser",
    "processthreadsapi",
    "securitybaseapi",
    "handleapi",
    "winnt",
    "synchapi",
    "impl-default"
] }

reqwest = { version = "0.12", features = ["blocking", "json"] } 
open = "5.3.0" # Чтобы открывать ссылку в браузере

[profile.release]
opt-level = 2
