[package]
name = "admin_helper"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27.0" # или твоя версия
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
global-hotkey = "0.5.0"
rdev = "0.5.3"
arboard = "3.3.0"
chrono = "0.4"
winapi = { version = "0.3", features = [
    "winuser",
    "processthreadsapi",
    "securitybaseapi",
    "handleapi",
    "winnt",
    "synchapi",
    "impl-default"
] }
image = { version = "0.24", features = ["png"] }
reqwest = { version = "0.12", features = ["blocking", "json"] } 
open = "5.3.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] } 
tokio = { version = "1", features = ["full"] } 
sysinfo = "0.30"    
sha2 = "0.10"       
hex = "0.4"
machine-uid = "0.5" 
postgres = "0.19"      
ureq = { version = "2.9", features = ["json"] }


[profile.release]
opt-level = 2

[build-dependencies]
winres = "0.1"
